# cc65-rp6502os

./: .gitignore  AI_PROMPT.md  CMakeLists.txt  CMakeLists.txt.backup202603151745  README.md
.claude/: settings.local.json
assets/: a4lorem.txt  font.asm  hello.asm  masstest.asm  midi.asm  midi_irq_driver_65_c_02.txt  midi_out_driver.asm  midia.s  miditest.asm  rp6502_VIA.asm  test.hex
assets/ASM/: font.asm  hello.asm
assets/FNT/: [font8x8]fonts.xcf
assets/GFX/: screentest.xcf  wallpaper.xcf
assets/TXT/: a4standard.txt  test.txt
docs/: editor-manual-en.txt  hass-manual-en.txt  hass-manual-pl.txt
release/0,01/: hass.rp6502
release/latest/: ctx.py  font.asm  hass.rp6502  hello.asm  razemos.rp6502  receivefile.py  sendfile.py  shell.ini  shell.rp6502
release/latest/SHELL/: courier.com  dir.com  hass.com  keyboard.com
src/: colors.h  commons.h  drv-midiout-vectors.s  drv-midiout.c  drv-midiout.cfg  drv-midiout.h  drv-midiout.s  editor.c  ext-anim.c  ext-cal copy 2.c  ext-cal copy 3.c  ext-cal copy.c  ext-cal.c  ext-calendar.c  ext-courier copy 2.c  ext-courier copy 3.c  ext-courier copy.c  ext-courier-receiver.c  ext-courier.c  ext-crx.c  ext-ctx.c  ext-date.c  ext-dir.c  ext-drives.c  ext-editor.c  ext-hass-opcodes.h  ext-hass.c  ext-hello.c  ext-help.c  ext-hex.c  ext-keyboard.c  ext-label.c  ext-mass copy.c  ext-mass-opcodes.h  ext-mass.c  ext-matrix.c  ext-nfc.c  ext-pack.c  ext-peek.c  ext-qasm.c  (+56 more)
src/0x7B00/: ext-hass.c
src/archive/: ext-cal.c  ext-mass backup before params.c  ext-rx copy 2.c  ext-rx copy.c  qasm.c  qasm.hlp
src/archive/rawbin/: hello.cfg  hello.map
src/backups/: ext-calendar.c  ext-tree.c
src/commons/: ansi.h  colors.h  console.h  courier-gfx.h  csi.h
src/ext-dir/: Makefile  crt0_cmd.s  initmainargs.s
src/extcmd/: Makefile  crt0_cmd.s  ext-cal.map  ext-calendar.map  ext-courier-receiver.map  ext-courier.map  ext-dir.map  ext-hello.map  ext-help.map  ext-keyboard.map  ext-label.map  ext-mass.map  ext-rx.map  ext-rxf.map  ext-settime.map  ext-term.map  ext-testrx.map
src/extcmd/cfg/: ext.cfg  ext0x0200.cfg  ext0x7000.cfg  ext0x7100.cfg  ext0x7200.cfg  ext0x7300.cfg  ext0x7400.cfg  ext0x7500.cfg  ext0x7600.cfg  ext0x7700.cfg  ext0x7800.cfg  ext0x7900.cfg  ext0x7A00.cfg  ext0x7B00.cfg  ext0x7C00.cfg  ext0x7D00.cfg  ext0x7E00.cfg  ext0x7F00.cfg  ext0x8000.cfg  ext0x9200.cfg  ext0x9300.cfg  ext0x9500.cfg  ext0x9600.cfg  ext0x9630.cfg  ext0x9700.cfg  ext0x9A00.cfg  ext0xA000.cfg  ext0xB000.cfg  ext0xC000.cfg  ext0xD000.cfg  ext0xE000.cfg  ext0xF000.cfg
src/extcmd/map/: ext-calendar.map  ext-crx.map  ext-ctx.map  ext-date.map  ext-dir.map  ext-drives.map  ext-hass.map  ext-help.map  ext-keyboard.map  ext-label.map  ext-ss-charnoise.map  ext-ss-matrix.map  ext-ss-noise.map  ext-term.map  ext-view.map
src/hello/: Makefile  crt0_cmd.s  hello backup.cfg  hello.c  hello.com  hello.map  initmainargs.c  write_stub.c
src/midi/wersja.A1/: buildit.sh  crt0.s  midi_out.c  opis.txt  picocomputer.cfg
src/midi/wersja.A2/: Makefile  crt0.s  midi_irq.s  midi_out.c  opis.txt  picocomputer.cfg
src/midi/wersja.B1/: Makefile  midi_out.c  midi_out.h  opis.txt  picocomputer.cfg  startup.s
src/midi/wersja.B2/: Makefile  midi_out.c  midi_out.h  midi_out.s  opis.txt  picocomputer.cfg  startup.s
src/midi/wersja.B3/: Makefile  midi_out.c  midi_out.h  midi_out.s  startup.s
src/rawbin/: asm.cfg  hello.c  mk.ps1  mkc.ps1  outs8000.cfg  outs8000.s  test2.cfg  test2.s
src/razemosmt/: CMakeLists[rmt].txt  CMakeLists_mt.txt  combined.cfg  crt0_cmd.s  crt0_shell.s  crt0_task.s  kern_calls.s  kernel.cfg  kernel.inc  kernel.s  patch_irq_vec.py  ria_api.s  shell.cfg  shell_mt.c  task1.cfg  task1_heartbeat.c  task2.cfg  task2_counter.c
src/razemosmt/cfg/: ext.cfg  ext_task2.cfg
src/trash/: ext-editor.c  ext-hass.c  ext-hello.c  ext-rc.c  ext-settime.c  ext-ss-matrix.c  ext-ss-noise.c  ext-test.c  hass-old.c
tools/: analyze_ttf.py  blockout.rp6502  crx.py  ctx.py  helper.ps1  install.ps1  install.py  make-com2shell.ps1  make-com2shell.py  make-coms.py  make-coms2shell.py  make-ext.ps1  make-exts.ps1  make-exts.py  picomatrix.rp6502  razemOScmd.py  receivefile.ps1  receivefile.py  rp6502.py  rp6502_9A00.cfg  run.ps1  run2rp6502.bat  sendfile.py  sendfile2rp6502.bat  sendfile_intelhex.ps1  shell.rp6502  term2rp6502.bat  test.hex  upload.ps1  upload2rp6502.bat
tools/obsolete/: rp6502_9A00.cfg  sendfile_base64.ps1  upload.ps1
tools/powershell/: install.ps1  make-com2rom.ps1  make-com2shell.ps1  make-exts.ps1  make-exts2shell.ps1
